--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.10.9",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
+    "transliteration": "^2.2.0",
     "uuid": "^8.3.1",
     "validator": "^13.1.17"
   }
