--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemailer": "^6.4.17",
     "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.4",
+    "rimraf": "^3.0.2",
     "transliteration": "^2.2.0",
     "uuid": "^8.3.1",
     "validator": "^13.1.17"
