--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "rimraf": "^3.0.2",
     "transliteration": "^2.2.0",
     "uuid": "^8.3.1",
-    "validator": "^13.1.17"
+    "validator": "^13.1.17",
+    "xmlbuilder": "^15.1.1"
   }
 }
