refactor pass recovery

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "author": "Dr",
   "license": "ISC",
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   },
   "bugs": {
     "url": "https://github.com/drgi/mroute-api-ex/issues"
